thanh ly thiet bi va update 1 so bang

--- a/NETCORE3.csproj
+++ b/NETCORE3.csproj
@@ -39,4 +39,7 @@
     <PackageReference Include="System.ServiceModel.NetTcp" Version="4.10.2" />
     <PackageReference Include="System.ServiceModel.Security" Version="4.10.2" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Data\Migrations\" />
+  </ItemGroup>
 </Project>
