--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -21,7 +21,9 @@
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      //"applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "applicationUrl": "https://10.14.26.91:5001;http://10.14.26.91:5000",
+
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
